--- a/t-pug.pug
+++ b/t-pug.pug
@@ -2,8 +2,8 @@ doctype
 html(amp, lang="en")
   head
     meta(charset="utf-8")
-    title !{title}
-    link(rel="canonical", href="/index.html")
+    title= title
+    link(rel="canonical", href="/index.php")
     meta(name="viewport", content="width=device-width,minimum-scale=1,initial-scale=1")
     script(type="application/ld+json").
       {
@@ -18,10 +18,8 @@ html(amp, lang="en")
     | 
     |<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     script(async, src="https://cdn.ampproject.org/v0.js")
-    //style(amp-custom)
-      //include style.css
-    style(amp-custom).
-      body {background-color: #333; color: #fff}
+    style(amp-custom)
+      include style.css
   body
     h1 This is a Jade based AMP page. Ad
     p some text 4 AMP project &nbsp;
