--- a/t-pug.pug
+++ b/t-pug.pug
@@ -1,27 +1,37 @@
 doctype
 html(amp, lang="en")
-  head
-    meta(charset="utf-8")
-    title= title
-    link(rel="canonical", href="/index.php")
-    meta(name="viewport", content="width=device-width,minimum-scale=1,initial-scale=1")
-    script(type="application/ld+json").
-      {
-        "@context": "http://schema.org",
-        "@type": "NewsArticle",
-        "headline": "Open-source framework for publishing content",
-        "datePublished": "2015-10-07T12:02:41Z",
-        "image": [
-          "logo.jpg"
-        ]
-      }
-    | 
-    |<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-    script(async, src="https://cdn.ampproject.org/v0.js")
-    style(amp-custom)
-      include style.css
-    // <?php readfile( getcwd() . "/style.css"); ?>
-  body
-    h1 This is a Jade based AMP page. Ad
-    p some text 4 AMP project &nbsp;
-      em !{$some_text}
+	head
+		meta(charset="utf-8")
+		title= title
+		link(rel="canonical", href="/index.php")
+		meta(name="viewport", content="width=device-width,minimum-scale=1,initial-scale=1")
+		script(type="application/ld+json").
+			{
+				"@context": "http://schema.org",
+				"@type": "NewsArticle",
+				"headline": "Open-source framework for publishing content",
+				"datePublished": "2015-10-07T12:02:41Z",
+				"image": [
+					"logo.jpg"
+				]
+			}
+		| 
+		|<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
+		script(async, src="https://cdn.ampproject.org/v0.js")
+		script(async, custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js")
+		style(amp-custom)
+			include style.css
+		// <?php readfile( getcwd() . "/style.css"); ?>
+	body
+		h1 This is a Jade based AMP page. Ad
+		p some text 4 AMP project &nbsp;
+			em !{$some_text}
+		if is_true
+			p is True
+		else
+			p is False
+			amp-sidebar#sidebar(layout="nodisplay" side="right")
+				p hey
+			button(on="tap:sidebar.toggle" class="ampstart-btn caps m2") Toggle sidebar
+		
+	
